# arium

./: .gitignore  CONFIG_DIOXUS.md  CONFIG_LEPTOS.md  Cargo.toml  INSTALL_DIOXUS.md  INSTALL_LEPTOS.md  README.md  SECURITY.md  USAGE.md  USAGE_DIOXUS.md  USAGE_LEPTOS.md
.github/: dependabot.yml
.github/workflows/: ci.yml  nightly.yml  release.yml
auth/src/: auth.rs  mail.rs  main.rs
auth/src/components/login_panel/: component.rs
crates/act/: Cargo.toml
crates/act-db/: Cargo.toml
crates/act-db/src/: audit.rs  config.rs  main.rs  output.rs
crates/act-db/src/cmd/: audit.rs  migrate.rs  mod.rs  roles.rs  tokens.rs  users.rs
crates/act/src/: audit.rs  extensions.rs  main.rs
crates/arium/: Cargo.toml  README.md
crates/arium-act/: README.md
crates/arium-act-db/: Cargo.toml  README.md
crates/arium-act-db/src/cmd/: audit.rs  migrate.rs  mod.rs  roles.rs
crates/arium-act/src/: gate.rs  lib.rs  main.rs
crates/arium-authz/: Cargo.toml  README.md
crates/arium-authz/src/: authz.rs  lib.rs  membership.rs
crates/arium-authz/tests/: standalone.rs
crates/arium-dioxus/: Cargo.toml  README.md
crates/arium-dioxus/src/: lib.rs  server.rs
crates/arium-dioxus/src/ui/: auth_stylesheets.rs  mod.rs
crates/arium-dioxus/src/ui/admin/: admin_screens.rs
crates/arium-dioxus/src/ui/login_panel/: component.rs
crates/arium-dioxus/src/ui/passkeys/: challenge.rs  conditional.rs  mod.rs  setup.rs  sign_in_button.rs  style.css  webauthn_client.rs
crates/arium-dioxus/tests/: access_control.rs  server_fn_roundtrip.rs
crates/arium-dioxus/tests/common/: mod.rs
crates/arium-leptos/: Cargo.toml  README.md
crates/arium-leptos/src/: lib.rs  server.rs
crates/arium-leptos/src/ui/: mod.rs
crates/arium-leptos/src/ui/admin/: admin_screens.rs  style.css
crates/arium-leptos/src/ui/components/card/: dx-card.css
crates/arium-leptos/src/ui/login_panel/: component.rs  style.css
crates/arium-leptos/tests/: access_control.rs  server_fn_roundtrip.rs
crates/arium-leptos/tests/common/: mod.rs
crates/arium-pool/: Cargo.toml  README.md
crates/arium-pool/src/: lib.rs
crates/arium-wire/: Cargo.toml  README.md
crates/arium-wire/src/: lib.rs
crates/arium/migrations/postgres/: 0009_webauthn.sql
crates/arium/migrations/sqlite/: 0009_webauthn.sql
crates/arium/src/: api_key.rs  auth.rs  authz_bridge.rs  config.rs  extract.rs  install.rs  lib.rs  pool.rs  sql_membership.rs  webauthn.rs
crates/arium/tests/: membership.rs  password_flow.rs  resource_authz.rs  webauthn.rs
crates/arium/tests/common/: mod.rs
crates/dx-auth/: Cargo.toml
crates/dx-auth/src/: auth.rs  config.rs  install.rs  lib.rs  oauth.rs  pool.rs  server.rs  wire.rs
crates/dx-auth/src/oauth/: github.rs
crates/dx-auth/src/ui/: auth_stylesheets.rs  mod.rs  oauth_providers.rs
crates/dx-auth/src/ui/account/: account_screens.rs
crates/dx-auth/src/ui/admin/: admin_screens.rs  audit_log.rs  mod.rs  role_screens.rs  style.css
crates/dx-auth/src/ui/components/: mod.rs
crates/dx-auth/src/ui/components/alert_dialog/: component.rs
crates/dx-auth/src/ui/components/avatar/: component.rs
crates/dx-auth/src/ui/components/badge/: component.rs
crates/dx-auth/src/ui/components/button/: component.rs
crates/dx-auth/src/ui/components/card/: component.rs
crates/dx-auth/src/ui/components/input/: component.rs
crates/dx-auth/src/ui/components/label/: component.rs
crates/dx-auth/src/ui/components/pagination/: component.rs
crates/dx-auth/src/ui/components/select/: component.rs
crates/dx-auth/src/ui/components/separator/: component.rs
crates/dx-auth/src/ui/components/skeleton/: component.rs
crates/dx-auth/src/ui/components/tabs/: component.rs
crates/dx-auth/src/ui/login_panel/: component.rs
crates/dx-auth/tests/: api_tokens.rs
examples/basic/: Cargo.toml  README.md
examples/basic/assets/: app.css
examples/basic/src/: auth.rs  main.rs
examples/basic/src/components/: mod.rs
examples/dioxus-fullstack-example/: .env.example  Cargo.toml  README.md  access-control-probe.sh  docker-compose.postgres.yml
examples/dioxus-fullstack-example/assets/: app.css
examples/dioxus-fullstack-example/src/: main.rs
examples/dioxus-rbac-example/: Cargo.toml  README.md
examples/dioxus-rbac-example/assets/: app.css
examples/dioxus-rbac-example/src/: main.rs
examples/leptos-fullstack-example/: .env.example  Cargo.toml  README.md  docker-compose.postgres.yml
examples/leptos-fullstack-example/src/: app.rs  main.rs
examples/leptos-rbac-example/: Cargo.toml  README.md
examples/leptos-rbac-example/src/: app.rs  lib.rs  main.rs
