[package]
name = "act-db"
version.workspace = true
edition.workspace = true
description = "`act` extension: operator-grade DB administration for arium (migrate, users, roles, tokens, audit) backed entirely by existing `arium::*` public APIs."
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true

[[bin]]
name = "act-db"
path = "src/main.rs"

[features]
default = ["sqlite"]
sqlite = ["arium/sqlite", "sqlx/sqlite"]
postgres = ["arium/postgres", "sqlx/postgres"]
membership = ["arium/sql-membership"]

[dependencies]
arium = { workspace = true, features = ["tokens", "mfa"] }
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
sqlx = { version = "0.8.6", default-features = false, features = ["runtime-tokio"] }
rpassword = "7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
